2004-04-19  Oyvind Harboe <oyvind.harboe@zylin.com>

	* src/tftp_server.c: files are now created with the
	O_CREAT|O_TRUNC|O_WRONLY so it is possible to write to
	non-existing files and that overwriting a larger file with
	a smaller file does not leave a garbage at the end.

2004-04-19  John Dallaway  <jld@ecoscentric.com>

	* doc/tcpip.sgml: Remove reference to RedBoot documentation
	which is now built separately.

2004-04-13  Sandeep Kumar <sandeep@codito.com>

	* src/network_support.c (init_all_network_interfaces): Fix argument to
        cyg_dns_res_start and removed errneaous extra closing brace around it.

2004-04-13  Jay Foster <jay.foster@systech.com>

	* src/bootp_support.c (do_bootp): Return false when we should.
	* src/dhcp_prot.c (do_dhcp_down_net): correctly close the IPv6 socket.

2004-04-11  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/bootp_support.c: 
	* src/dhcp_prot.c: Close sockets before exiting so we don't leak
	them.
	* src/dhcp_prot.c (new_lease): Use a smaller infinite so we don't get
	a compiler warning.
	
2004-02-27     Robert Chenault <robertchenault@yahoo.com>

        * cdl/net.cdl:
	* src/dhcp_prot.c: Added CYGNUM_NET_DHCP_MIN_RETRY_TIME

2004-02-17	Matt Jerdonek <maj1224@yahoo.com>

	* src/dhcp_prot.c: Fix initialization of DHCP sec field

2003-12-10  Gary Thomas  <gary@mlbassoc.com>

	* src/inet_ntoa.c: Add thread safe inet_ntoa_r() and change
	inet_ntoa() to use it.  Inspired by Matt Jerdonek.

	* include/net/netdb.h: 
	* include/arpa/inet.h: Prototype for inet_ntoa_r()

2003-11-25  Manu Sharma <manu.sharma@ascom.com>

         * tests/bridge.c: Changes to enable Spanning Tree Protocol if the
	 corresponding CDL component is enabled.
 
2003-11-24  Jani Monoses <jani@iv.ro>

	* cdl/net.cdl: Close quote for test list.
	
2003-11-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/net.cdl: Added control for IPSEC 
	* doc/ipsec.sgml: General documentation of ipsec.

2003-10-30  Gary Thomas  <gary@mlbassoc.com>
